Añadir job comandos_windows

--- a/.github/workflows/ci-primer-wf.yml
+++ b/.github/workflows/ci-primer-wf.yml
@@ -22,4 +22,13 @@ jobs:
         run: |
                 import platform
                 print (platform.processor())
-        shell: python  
+        shell: python
+  comandos_windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: PowerShell
+        run: |
+              Get-Location
+              Get-ChildItem
+        shell: powershell  
